--- a/index.html
+++ b/index.html
@@ -4,11 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>microsoft website clone</title>
+    <title>Microsoft website clone</title>
 </head>
 <body>
-
-    <h1>Microsft website clone</h1>
-    
+    <header class="header u-main-padding">
+        <nav class="navigation">
+            <div class="logo">
+                <img src="./img/icons/logo.svg" alt="logo">
+            </div>
+            <ul class="nav-items">
+                <li>
+                    <a href="#">Microsoft 365</a>
+                </li>
+                <li>
+                    <a href="#">Office</a>
+                </li>
+                <li>
+                    <a href="#">Windows</a>
+                </li>
+                <li>
+                    <a href="#">Surface</a>
+                </li>
+                <li>
+                    <a href="#">Xbox</a>
+                </li>
+                <li>
+                    <a href="#">Deals</a>
+                </li>
+                <li>
+                    <a href="#">Support &rsaquo;</a>
+                </li>
+            </ul>
+            <div class="nav-right-items">
+                <ul>
+                    <li>
+                        <a href="#">All Microsoft &nbsp; &#8964;</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
