--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Microsoft website clone</title>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <header class="header u-main-padding">
         <nav class="navigation">
-            <div class="logo">
-                <img src="./img/icons/logo.svg" alt="logo">
-            </div>
             <ul class="nav-items">
+                <div class="logo">
+                    <img src="./img/icons/logo.svg" alt="logo">
+                </div>
+
                 <li>
                     <a href="#">Microsoft 365</a>
                 </li>
@@ -32,13 +34,31 @@
                     <a href="#">Deals</a>
                 </li>
                 <li>
-                    <a href="#">Support &rsaquo;</a>
+                    <a href="#">Support</a>
                 </li>
             </ul>
             <div class="nav-right-items">
-                <ul>
+                <ul class="right-items-nav">
                     <li>
                         <a href="#">All Microsoft &nbsp; &#8964;</a>
+                    </li>
+                    <li>
+                        <a href="#" class="right-icons">
+                            <input type="text" name="" id="" placeholder="search"> 
+                            <img src="./img/icons/Search.svg" alt="search" class="search-icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="right-icons">
+                            Cart
+                            <img src="./img/icons/trolley.svg" alt="trolley" class="trolley-icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="right-icons">
+                            Sign in
+                            <img src="./img/icons/user.svg" alt="trolley" class="user-icon">
+                        </a>
                     </li>
                 </ul>
             </div>
