--- a/index.html
+++ b/index.html
@@ -63,6 +63,23 @@
                 </ul>
             </div>
         </nav>
+        <section class="hero-section">
+            <img src="img/surface_pro.png" alt="">
+            <div class="hero-content">
+                <h1>Limited-time offer</h1>
+                <p class="para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt atque necessitatibus placeat eum consequuntur consectetur?
+                </p>
+                <a href="#" class="btn-primary">Shop now &nbsp;&rsaquo;</a>
+            </div>
+
+            <div class="hero-controls">
+                <div class="hero-con-1"></div>
+                <div class="hero-con-2"></div>
+                <div class="hero-con-3"></div>
+                <div class="hero-con-4"></div>
+            </div>
+        </section>
     </header>
 </body>
 </html>
