--- a/index.html
+++ b/index.html
@@ -81,5 +81,8 @@
             </div>
         </section>
     </header>
+    <main>
+        <section class="services-section"></section>
+    </main>
 </body>
 </html>
