--- a/index.html
+++ b/index.html
@@ -81,8 +81,45 @@
             </div>
         </section>
     </header>
-    <main>
-        <section class="services-section"></section>
+    <main class="main u-main-padding">
+        <section class="services-section">
+            <div class="service">
+                <a href="#">
+                    <img src="img/icons/windows_logo.svg" alt="windows">
+                    Choose your <br> Microsoft 365
+                </a>
+            </div>
+            <div class="service">
+                <a href="#">
+                    <img src="img/icons/ipad_surface.svg" alt="surface">
+                    Shop for Surface <br> devices
+                </a>
+            </div>
+            <div class="service">
+                <a href="#">
+                    <img src="img/icons/xbox.svg" alt="xbox">
+                    Buy Xbox games <br> and consoles
+                </a>
+            </div>
+            <div class="service">
+                <a href="#">
+                    <img src="img/icons/windows_logo.svg" alt="windows">
+                    Shop for <br> Windows 10
+                </a>
+            </div>
+            <div class="service">
+                <a href="#">
+                    <img src="img/icons/laptop.svg" alt="laptop">
+                    Find your next PC
+                </a>
+            </div>
+            <div class="service">
+                <a href="#">
+                    <img src="img/icons/briefcase.svg" alt="business">
+                    Shop Business
+                </a>
+            </div>
+        </section>
     </main>
 </body>
 </html>
