--- a/index.html
+++ b/index.html
@@ -120,6 +120,58 @@
                 </a>
             </div>
         </section>
+
+        <section class="products">
+            <div class="product">
+                <div class="product-image">
+                    <img src="/img/surface_laptop.jpg" alt="surface_laptop">
+                </div>
+                <h3>Surface Laptop Go</h3>
+                <p class="para">
+                    Make the most of every day with the sleek style and performance of our lightest Surface laptop.
+                </p>
+                <a href="#" class="btn-secondary">Shop now &nbsp;&GT;
+                </a>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="/img/office.jpg" alt="office">
+                </div>
+                <h3>Microsoft 365</h3>
+                <p class="para">
+                    Premium Office apps, extra cloud storage, advanced security, and more – all in one convenient subscription.
+                </p>
+                <a href="#" class="btn-secondary">Shop now &nbsp;&GT;
+                </a>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="/img/gamepass.jpg" alt="gamepass">
+                </div>
+                <h3>Xbox Game Pass Ultimate</h3>
+                <p class="para">
+                    Xbox Live Gold and over 100 high-quality console and PC games. Play together with friends and discover your next favourite game.
+                </p>
+                <a href="#" class="btn-secondary">Shop now &nbsp;&GT;
+                </a>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="/img/xbox.jpg" alt="xbox">
+                </div>
+                <h3>Xbox Series S</h3>
+                <p class="para">
+                    Buy the Xbox Series S and save up to 20% off on an Xbox Wireless Controller including the Elite Wireless controller.
+                </p>
+                <a href="#" class="btn-secondary">Shop now &nbsp;&GT;
+                </a>
+            </div>
+        </section>
+        <section class="browser-section">
+            <div class="browser-image">
+                <img src="/img/ms_edge.png" alt="">
+            </div>
+        </section>
     </main>
 </body>
 </html>
