--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </div>
                 <h3>Xbox Game Pass Ultimate</h3>
                 <p class="para">
-                    Xbox Live Gold and over 100 high-quality console and PC games. Play together with friends and discover your next favourite game.
+                    Xbox Live Gold and over 100 high-quality console and PC games. Play together with friends and discover your next game.
                 </p>
                 <a href="#" class="btn-secondary">Shop now &nbsp;&GT;
                 </a>
@@ -170,6 +170,12 @@
         <section class="browser-section">
             <div class="browser-image">
                 <img src="/img/ms_edge.png" alt="">
+            </div>
+            <div class="browser-content">
+                <h1>Microsoft Edge</h1>
+                <p class="para">World-class performance with more privacy, more productivity and more value while you browse
+                </p>
+                <a href="#" class="btn-primary">Download now &nbsp;&GT; </a>
             </div>
         </section>
     </main>
