--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                 </a>
             </div>
         </section>
+
         <section class="browser-section">
             <div class="browser-image">
                 <img src="/img/ms_edge.png" alt="">
@@ -178,6 +179,8 @@
                 <a href="#" class="btn-primary">Download now &nbsp;&GT; </a>
             </div>
         </section>
+        <h3 class="sub-title">For Business</h3>
+
     </main>
 </body>
 </html>
