--- a/index.html
+++ b/index.html
@@ -181,6 +181,53 @@
         </section>
         <h3 class="sub-title">For Business</h3>
 
+        <section class="products">
+            <div class="product">
+                <div class="product-image">
+                    <img src="/img/surface_laptop.jpg" alt="surface_laptop">
+                </div>
+                <h3>Surface Laptop Go</h3>
+                <p class="para">
+                    Make the most of every day with the sleek style and performance of our lightest Surface laptop.
+                </p>
+                <a href="#" class="btn-secondary">Shop now &nbsp;&GT;
+                </a>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="/img/teams.jpg" alt="office">
+                </div>
+                <h3>Microsoft Teams</h3>
+                <p class="para">
+                    Chat, meet, call and collaborate
+                </p>
+                <a href="#" class="btn-secondary">Shop now &nbsp;&GT;
+                </a>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="/img/business.jpg" alt="gamepass">
+                </div>
+                <h3>Microsoft 365 for business</h3>
+                <p class="para">
+                    Stay a step ahead withpowerful apps for productivity, connection and security.
+                </p>
+                <a href="#" class="btn-secondary">Shop now &nbsp;&GT;
+                </a>
+            </div>
+            <div class="product">
+                <div class="product-image">
+                    <img src="/img/xbox.jpg" alt="xbox">
+                </div>
+                <h3>Xbox Series S</h3>
+                <p class="para">
+                    Buy the Xbox Series S and save up to 20% off on an Xbox Wireless Controller including the Elite Wireless controller.
+                </p>
+                <a href="#" class="btn-secondary">Shop now &nbsp;&GT;
+                </a>
+            </div>
+        </section>
+
     </main>
 </body>
 </html>
