--- a/index.html
+++ b/index.html
@@ -228,6 +228,159 @@
             </div>
         </section>
 
+        <section class="health-section"></section>
+
     </main>
+    <footer class="footer">
+        <div class="footer-content u-main-padding">
+            <div class="footer-nav">
+                <h5>What's new</h5>
+                <ul>
+                    <li>
+                        <a href="#">Surface Laptop 4</a>
+                    </li>
+                    <li>
+                        <a href="#">Surface Duo</a>
+                    </li>
+                    <li>
+                        <a href="#">Surface Laptop Go</a>
+                    </li>
+                    <li>
+                        <a href="#">Surface Go 2</a>
+                    </li>
+                    <li>
+                        <a href="#">Surface Pro X</a>
+                    </li>
+                    <li>
+                        <a href="#">Microsoft 365</a>
+                    </li>
+                    <li>
+                        <a href="#">Windows 10 apps</a>
+                    </li>
+                    <li>
+                        <a href="#">HoloLens 2</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-nav">
+                <h5>Microsoft Store</h5>
+                <ul>
+                    <li>
+                        <a href="#">Account Profile</a>
+                    </li>
+                    <li>
+                        <a href="#">Download Center</a>
+                    </li>
+                    <li>
+                        <a href="#">Microsoft Store Support</a>
+                    </li>
+                    <li>
+                        <a href="#">Returns</a>
+                    </li>
+                    <li>
+                        <a href="#">Order Tracking</a>
+                    </li>
+                    <li>
+                        <a href="#">Microsoft Experience Centre</a>
+                    </li>
+                    <li>
+                        <a href="#">Recycling</a>
+                    </li>
+                    <li>
+                        <a href="#">Microsoft Store Promise</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-nav">
+                <h5>Education</h5>
+                <ul>
+                    <li>
+                        <a href="#">Microsoft in Education</a>
+                    </li>
+                    <li>
+                        <a href="#">Office for students</a>
+                    </li>
+                    <li>
+                        <a href="#">Office 365 for schools</a>
+                    </li>
+                    <li>
+                        <a href="#">Deals for students and parents</a>
+                    </li>
+                    <li>
+                        <a href="#">Microsoft Azure in education</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-nav">
+                <h5>Enterprise</h5>
+                <ul>
+                    <li>
+                        <a href="#">Azure</a>
+                    </li>
+                    <li>
+                        <a href="#">AppSource</a>
+                    </li>
+                    <li>
+                        <a href="#">Automotive</a>
+                    </li>
+                    <li>
+                        <a href="#">Government</a>
+                    </li>
+                    <li>
+                        <a href="#">Healthcare</a>
+                    </li>
+                    <li>
+                        <a href="#">Manufacturing</a>
+                    </li>
+                    <li>
+                        <a href="#">Financial services</a>
+                    </li>
+                    <li>
+                        <a href="#">Retail</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-nav">
+                <h5>Developer</h5>
+                <ul>
+                    <li>
+                        <a href="#">Microsoft Visual Studio</a>
+                    </li>
+                    <li>
+                        <a href="#">Developer Center</a>
+                    </li>
+                    <li>
+                        <a href="#">Channel 9</a>
+                    </li>
+                    <li>
+                        <a href="#">Office Dev Centre</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-nav">
+                <h5>Company</h5>
+                <ul>
+                    <li>
+                        <a href="#">Careers</a>
+                    </li>
+                    <li>
+                        <a href="#">About Microsoft</a>
+                    </li>
+                    <li>
+                        <a href="#">Company news</a>
+                    </li>
+                    <li>
+                        <a href="#">Privacy at Microsoft</a>
+                    </li>
+                    <li>
+                        <a href="#">Investors</a>
+                    </li>
+                    <li>
+                        <a href="#">Security</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
