--- a/index.html
+++ b/index.html
@@ -228,7 +228,15 @@
             </div>
         </section>
 
-        <section class="health-section"></section>
+        <section class="health-section">
+            <div class="health-container">
+                <h1>Microsoft’s response to COVID-19</h1>
+            <p>
+                Read how we’re responding to the COVID-19 outbreak, and get resources to help.
+            </p>
+            <a href="#" class="btn-secondary">Learn more &nbsp;&GT;</a>
+            </div>
+        </section>
 
     </main>
     <footer class="footer">
